[package]
name = "rs_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
winit = "0.26.1"
glutin = "0.28.0"

[dependencies]
winit = "0.26.1"
glutin = "0.28.0"
#rustsdk = {path="../rustsdk"}
rustsdk = {git="https://github.com/pigfall/rustsdk.git"}


[build-dependencies]
gl_generator="0.14"

