[package]
name = "rs_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
winit = "0.26.1"
glutin = "0.28.0"
#fyrox = "0.24.0"
fyrox = {path="../fyrox-0.24.0"}

[dependencies]
rustsdk = {git="https://github.com/pigfall/rustsdk.git"}
#glow = {git="https://github.com/pigfall/glow",branch="tzz_dev_base_on_v0.11.1"}
glow = {path="../glow"}
nalgebra-glm = "0.16.0"
nalgebra = "0.29.0"
thiserror = "1"
fyrox-core = "0.19.0"
fxhash = "0.2.1"


[build-dependencies]
gl_generator="0.14"

